# ptex-tools

./: .gitignore  CMakeLists.txt  LICENSE  PtexUtilsConfig.cmake  README.md  default.nix  shell.nix
cmake/: FindPTex.cmake
ptexutils/: __init__.py
src/ptex_merge/: CMakeLists.txt  ptex_merge.cpp  ptex_merge.hpp  ptex_merge_main.cpp  py_ptx_utils.cpp
src/ptex_utils/: CMakeLists.txt  helpers.cpp  helpers.hpp  main.cpp  make_constant.cpp  mesh.cpp  mesh.hpp  objreader.cpp  objreader.hpp  ptex_conform.cpp  ptex_info.cpp  ptex_merge.cpp  ptex_reverse.cpp  ptex_util.hpp  ptexutils.hpp  py_ptx_utils.cpp
